#337 added support for generic type information in class files